fix: 🐛 make animations look good on iOS

--- a/src/style.css
+++ b/src/style.css
@@ -156,10 +156,6 @@ button.cell {
 .cell::before {
   aspect-ratio: 1;
   border-radius: 100vmax;
-  transition:
-    box-shadow 0.5s ease-in-out 0s,
-    transform 0.5s ease-in-out 0s,
-    background-color 0s step-start 0.25s;
 }
 
 .cell.black::before,
@@ -167,6 +163,9 @@ button.cell {
 .updating .cell:is(:nth-child(28), :nth-child(29), :nth-child(36), :nth-child(37))::before {
   content: "";
   animation: grow 0.5s ease-in-out;
+  transition:
+    transform 0.5s ease-in-out 0s,
+    background-color 0s step-start 0.25s;
 }
 
 .updating .cell:is(:nth-child(28), :nth-child(29), :nth-child(36), :nth-child(37))::before {
